--- a/index.html
+++ b/index.html
@@ -7,15 +7,48 @@
             <title>ZaneSpace</title>
     </head> 
 
-    <body>
+    <header>         
         <div>Profile pic</div>
         <p>Site Name</p> 
         <div>Search bar</div>
         <p>Username</p>
         <p>Date joined</p>
+    </header>
+
+    <body>
         <h1>Title</h1>
         <div>Personal picture</div>
         <p> Information about me</p>
         <Div>Youtube link</Div>
+
+            <menu>
+                <li>Page 2</li>
+                <li>Page 3</li>
+                <li>Page 4</li>
+                <li>Page 5</li>
+            </menu>
+<main>
+    <h1>Title!</h1>
+    <P> Big Time</P>
+    <h2> Title 2</h2>
+    <ul>
+        <li></li>
+        <li></li>
+    </ul>
+</main>
+<Footer>This footer is huge</Footer>
+
+            <style>
+                Header, footer {
+                    background-color:grey;  
+                    font-size: 1em;
+                }
+                p, div, menu, ul, li, img {
+                    border: 1px solid #000;
+                    color:black; 
+                
+                }
+            </style>
+
     </body>
 </html>
