--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lamg="en-US">
+<html lang="en-US">
     <head> <!-- does not show in browser -->
       <meta charset="utf-8" />
         <meta name="viewpoint" content="width=device-width"/>
