--- a/page4.html
+++ b/page4.html
@@ -8,9 +8,9 @@
     </head> 
 
     <body>
-      <div>Navigation</div>
-      <p>Something is here</p>
-      <div>Gen text</Div>
-      <div>More gen text</div>
+     <!-- id should only be used 1 time per page and used carefully -->
+
+    <div> id="wraper" </div>
+
     </body>
 </html>
