--- a/practice/Indextest.html
+++ b/practice/Indextest.html
@@ -11,7 +11,6 @@
 
             <title>ZaneSpace</title>
     </head> 
-
     <header>         
         <div>Profile pic</div>
         <p>Site Name</p> 
@@ -19,7 +18,6 @@
         <p>Username</p>
         <p>Date joined</p>
     </header>
-
     <body>
         <h1>Title</h1>
         <div>Personal picture</div>
@@ -43,6 +41,6 @@
 </main>
 <Footer>
     Copyright
-    <p><a href="https://www.google.com">Visit Google!</a></p></Footer>
+    <p><a href="https://www.google.com">Visit Google!!</a></p></Footer>
     </body>
 </html>
