--- a/csstricks-flexbox.html
+++ b/csstricks-flexbox.html
@@ -19,7 +19,7 @@
         flex-flow: row wrap;
 
         /* Then we define how is distributed the remaining space */
-        justify-content: space-around;
+        justify-content: space-evenly;
 
         padding: 0;
         margin: 0;
