--- a/assignments/Indextest.html
+++ b/assignments/Indextest.html
@@ -12,11 +12,18 @@
             <title>ZaneSpace</title>
     </head> 
     <header>         
-        <div>Profile pic</div>
-        <p>Site Name</p> 
-        <div>Search bar</div>
-        <p>Username</p>
-        <p>Date joined</p>
+        <div>
+            <ul class="flex-container"> 
+            <li class="flex-item">Add Friend</Li>
+            <li class="flex-item">Add to Group</li>
+            <li class="flex-item">Add to Favorites</li>
+        </ul>
+        <ul class="flex-container"> 
+            <li class="flex-item">Send Message</li>
+            <li class="flex-item">Rate User</li>
+            <li class="flex-item">Block User</li>
+        </ul>
+        </div>
     </header>
     <body>
         <h1>Title</h1>
@@ -34,10 +41,7 @@
     <h1>Title!</h1>
     <P> Big Time</P>
     <h2> Title 2</h2>
-    <ul>
-        <li></li>
-        <li></li>
-    </ul>
+
 </main>
 <Footer>
     Copyright
