--- a/assignments/Indextest.html
+++ b/assignments/Indextest.html
@@ -12,6 +12,8 @@
             <title>ZaneSpace</title>
     </head> 
     <header>         
+        <Nav> Search: </Nav>
+        <p><a href="https://www.google.com">Log in:</a></p>
         <div>
             <ul class="flex-container"> 
             <li class="flex-item">Add Friend</Li>
@@ -26,25 +28,25 @@
         </div>
     </header>
     <body>
-        <h1>Title</h1>
-        <div>Personal picture</div>
-        <p> Information about me</p>
-        <Div>Youtube link</Div>
-
-            <menu>
-                <li>Page 2</li>
-                <li>Page 3</li>
-                <li>Page 4</li>
-                <li>Page 5</li>
-            </menu>
-<main>
-    <h1>Title!</h1>
-    <P> Big Time</P>
-    <h2> Title 2</h2>
-
+ <menu>
+                <h3>Last Login: 09/18/2000</h3>
+                <h3>Name: Zane-Foster</h3>
+                <h3> Location: Seattle-Washington</h3>
+        <p>I love going to concerts and listening to music, </p>
+        <p><a href="https://www.Youtube.com">Visit Youtube!!</a></p></Footer>
+ </menu>
+ <main>
+    <ul class="flex-box"> 
+        <li class="flex-link">Page 1</li>
+        <li class="flex-link">Page 2</li>
+        <li class="flex-link">Page 3</li>
+        <li class="flex-link">Page 4</li>
+        <li class="flex-link">Page 5</li>
+     </ul>
 </main>
 <Footer>
     Copyright
-    <p><a href="https://www.google.com">Visit Google!!</a></p></Footer>
+    <p><a href="https://www.google.com">Visit Google!!</a></p>
+</Footer>
     </body>
 </html>
