--- a/index.html
+++ b/index.html
@@ -3,18 +3,28 @@
     <head> <!-- does not show in browser -->
       <meta charset="utf-8" />
         <meta name="viewpoint" content="width=device-width"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Righteous&display=swap"  rel="stylesheet">
+
+         <link rel="stylesheet" href="../css/base-style.css" />
 
             <title>ZaneSpace</title>
     </head> 
-
     <header>         
-        <div>Profile pic</div>
-        <p>Site Name</p> 
-        <div>Search bar</div>
-        <p>Username</p>
-        <p>Date joined</p>
+        <div>
+            <ul class="flex-container"> 
+            <li class="flex-item">Add Friend</Li>
+            <li class="flex-item">Add to Group</li>
+            <li class="flex-item">Add to Favorites</li>
+        </ul>
+        <ul class="flex-container"> 
+            <li class="flex-item">Send Message</li>
+            <li class="flex-item">Rate User</li>
+            <li class="flex-item">Block User</li>
+        </ul>
+        </div>
     </header>
-
     <body>
         <h1>Title</h1>
         <div>Personal picture</div>
@@ -31,24 +41,10 @@
     <h1>Title!</h1>
     <P> Big Time</P>
     <h2> Title 2</h2>
-    <ul>
-        <li></li>
-        <li></li>
-    </ul>
+
 </main>
-<Footer>This footer is huge</Footer>
-
-            <style>
-                Header, footer {
-                    background-color:grey;  
-                    font-size: 1em;
-                }
-                p, div, menu, ul, li, img {
-                    border: 1px solid #000;
-                    color:black; 
-                
-                }
-            </style>
-
+<Footer>
+    Copyright
+    <p><a href="https://www.google.com">Visit Google!!</a></p></Footer>
     </body>
 </html>
