--- a/assignments/Indextest.html
+++ b/assignments/Indextest.html
@@ -13,7 +13,7 @@
     </head> 
     <header>         
         <Nav> Search: </Nav>
-        <p><a href="https://www.google.com">Log in:</a></p>
+        <p><a href="../page5.html">Log in:</a></p>
         <div>
             <ul class="flex-container"> 
             <li class="flex-item">Add Friend</Li>
@@ -37,11 +37,11 @@
  </menu>
  <main>
     <ul class="flex-box"> 
-        <li class="flex-link">Page 1</li>
-        <li class="flex-link">Page 2</li>
-        <li class="flex-link">Page 3</li>
-        <li class="flex-link">Page 4</li>
-        <li class="flex-link">Page 5</li>
+        <li class="flex-link"><a href="../indextest.html">Home</a></li>
+        <li class="flex-link"><a href="../page2.html">Page 2</a></li>
+        <li class="flex-link"><a href="../page3.html">Page 3</a></li>
+        <li class="flex-link"><a href="../page4.html">Page 4</a></li>
+        <li class="flex-link"><a href="../page5.html">Page 5</a></li>
      </ul>
 </main>
 <Footer>
