--- a/assignments/Indextest.html
+++ b/assignments/Indextest.html
@@ -12,41 +12,43 @@
             <title>ZaneSpace</title>
     </head> 
     <header>         
-        <Nav> Search: </Nav>
-        <p><a href="../page5.html">Log in:</a></p>
+        <Nav><a href="../page5.html"> Log in:</a></Nav>
+            <div class="topnav">
+                <input type="text" placeholder="Search...">
+            </div>
         <div>
-            <ul class="flex-container"> 
+         <ul class="flex-container"> 
             <li class="flex-item">Add Friend</Li>
             <li class="flex-item">Add to Group</li>
             <li class="flex-item">Add to Favorites</li>
         </ul>
-        <ul class="flex-container"> 
-            <li class="flex-item">Send Message</li>
-            <li class="flex-item">Rate User</li>
-            <li class="flex-item">Block User</li>
-        </ul>
+            <ul class="flex-container"> 
+                <li class="flex-item">Send Message</li>
+                <li class="flex-item">Rate User</li>
+                <li class="flex-item">Block User</li>
+            </ul>
         </div>
     </header>
     <body>
- <menu>
-                <h3>Last Login: 09/18/2000</h3>
-                <h3>Name: Zane-Foster</h3>
-                <h3> Location: Seattle-Washington</h3>
+ <main>
+        <h3 class="Login">Last Login: 09/18/2000</h3>
+        <h3 class="Name">Name: Zane-Foster</h3>
+        <h3 class="Location"> Location: Seattle-Washington</h3>
         <p>I love going to concerts and listening to music, </p>
         <p><a href="https://www.Youtube.com">Visit Youtube!!</a></p></Footer>
- </menu>
- <main>
+ </main>
+ <menu>
     <ul class="flex-box"> 
-        <li class="flex-link"><a href="../indextest.html">Home</a></li>
+        <li class="flex-link"><a href="../index.html">Home</a></li>
         <li class="flex-link"><a href="../page2.html">Page 2</a></li>
         <li class="flex-link"><a href="../page3.html">Page 3</a></li>
         <li class="flex-link"><a href="../page4.html">Page 4</a></li>
         <li class="flex-link"><a href="../page5.html">Page 5</a></li>
      </ul>
-</main>
+ </menu>
 <Footer>
     Copyright
-    <p><a href="https://www.google.com">Visit Google!!</a></p>
-</Footer>
+    <p><a href="https://www.google.com">Link</a></p>
+        </Footer>
     </body>
 </html>
