--- a/page4.html
+++ b/page4.html
@@ -11,6 +11,8 @@
      <!-- id should only be used 1 time per page and used carefully -->
 
     <div> id="wraper" </div>
+    <h1> Title for page 4</h1>
+    <p>Paragraph for page four.</p>
 
     </body>
 </html>
