--- a/page5.html
+++ b/page5.html
@@ -8,14 +8,7 @@
     </head> 
 
     <body>
-        <div>Profile pic</div>
-        <p>Site Name</p> 
-        <div>Search bar</div>
-        <p>Username</p>
-        <p>Date joined</p>
-        <h1>Title</h1>
-        <div>Personal picture</div>
-        <p> Information about me</p>
-        <Div>Youtube link</Div>
+     <h1>Username:</h1>
+     <h1>Password:</h1>
     </body>
 </html>
