--- a/assignments/menu/menupage4.html
+++ b/assignments/menu/menupage4.html
@@ -1,18 +1,49 @@
 <!doctype html>
-<html lamg="en-US">
-    <head> <!-- does not show in browser -->
-      <meta charset="utf-8" />
-        <meta name="viewpoint" content="width=device-width"/>
-
-            <title>ZaneSpace</title>
-    </head> 
-
-    <body>
-     <!-- id should only be used 1 time per page and used carefully -->
-
-    <div> id="wraper" </div>
-    <h1> Title for page 4</h1>
-    <p>Paragraph for page four.</p>
-
-    </body>
+<html lang="en-US">
+  <head> <!-- does not show in browser -->
+    <meta charset="utf-8">
+    <meta name="viewpoint" content="width=device-width">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Righteous&display=swap"  rel="stylesheet">
+    <link rel="stylesheet" href="menu-css/menu-style.css">
+    <title>ZaneSpace</title>
+</head> 
+<header>         
+  <Nav><a href="menupage5.html"> Log in:</a></Nav>
+  <div class="topnav">
+    <input type="text" placeholder="Search...">
+  </div>
+  <div>
+    <ul class="flex-container"> 
+        <li class="flex-item">Add Friend</Li>
+        <li class="flex-item">Add to Group</li>
+        <li class="flex-item">Add to Favorites</li>
+     </ul>
+     <ul class="flex-container"> 
+        <li class="flex-item">Send Message</li>
+        <li class="flex-item">Rate User</li>
+        <li class="flex-item">Block User</li>
+    </ul>
+  </div>
+</header>
+<main>
+  <h3 class="Login">Last Login: 09/18/2000</h3>
+  <h3 class="Name">Name: Zane-Foster</h3>
+  <h3 class="Location"> Location: Seattle-Washington</h3>
+  <p>I love going to concerts and listening to music, I enjoy traveling, hanging with friends, playing video games, thrift shopping, reading books, and taking pictures. Welcome to my page for me about me!</p>
+  <p><a href="https://www.Youtube.com">Visit Youtube!!</a></p>
+ </main>
+ <menu class="flex-box">
+    <li class="flex-link"><a href="indexmenu.html">Home</a></li>
+    <li class="flex-link"><a href="menupage2.html">Page 2</a></li>
+    <li class="flex-link"><a href="menupage3.html">Page 3</a></li>
+    <li class="flex-link"><a href="menupage4.html">Page 4</a></li>
+    <li class="flex-link"><a href="menupage5.html">Page 5</a></li>
+</menu>
+<footer>
+  Copyright
+  <p><a href="https://www.google.com">Link</a></p>
+</footer>
+</body>
 </html>
