--- a/assignments/Indextest.html
+++ b/assignments/Indextest.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en-US">
-  <head> <!-- does not show in browser -->
+  <head> 
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,8 +42,7 @@
     <li class="flex-link"><a href="../page5.html">Page 5</a></li>
 </menu>
 <footer>
-  Copyright
-  <p><a href="https://www.google.com">Link</a></p>
+  Copyright © 2005-2023  <p><a href="https://www.google.com">Link</a></p>
 </footer>
 </body>
 </html>
