--- a/assignments/header/footer/indexmenu.html
+++ b/assignments/header/footer/indexmenu.html
@@ -15,7 +15,7 @@
     <input type="text" placeholder="Search...">
   </div>
   <div class="flex-container">
-    <img src="../../img/logozp.png" alt="logo"> 
+    <img src="../../../img/logozp.png" alt="logo"> 
     <ul> 
         <li><a href="index.html">Add Friend</a></Li>
         <li><a href="index.html">Add to Group</a></li>
@@ -27,14 +27,14 @@
   </div>
 </header>
 <main>
-  <img src="../../img/catface.jpg" alt="zanepfp" height="200" width="250">
+  <img src="../../..//img/catface.jpg" alt="zanepfp" height="200" width="250">
   <h3>Last Login: 09/18/2000</h3>
   <h3>Name: Zane-Foster</h3>
   <h3> Location: Seattle-Washington</h3>
   <h4>About Me:</h4>
   <h4>I love going to concerts and listening to music, I enjoy traveling, hanging with friends, playing video games, thrift shopping, reading books, and taking pictures. Welcome to my page!</h4>
   <p><a href="https://www.Youtube.com">Visit Youtube!!</a></p>
-  <img src="../../img/verve.png" alt="verve" height="250" width="320">
+  <img src="../../../img/verve.png" alt="verve" height="250" width="320">
   <p><a href="https://spotify.link/i3WsQwwwQlb">My Spotify</a></p>
  </main>
  <menu class="flex-box">
