before the cleanup

--- a/assignments/header/footer/indexmenu.html
+++ b/assignments/header/footer/indexmenu.html
@@ -1,52 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
-  <head> <!-- does not show in browser -->
-    <meta charset="utf-8">
-    <meta name="viewpoint" content="width=device-width">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Righteous&display=swap"  rel="stylesheet">
-    <link rel="stylesheet" href="menu-css/menu-style.css">
+  <head>
+    <!-- does not show in browser -->
+    <meta charset="utf-8" />
+    <meta name="viewpoint" content="width=device-width" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Righteous&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="menu-css/menu-style.css" />
     <title>ZaneSpace</title>
-</head> 
-<header>         
-  <Nav><a href="menupage5.html"> Log in:</a></Nav>
-  <div class="topnav">
-    <input type="text" placeholder="Search...">
-  </div>
-  <div class="flex-container">
-    <img src="../../../img/logozp.png" alt="logo"> 
-    <ul> 
-        <li><a href="index.html">Add Friend</a></Li>
-        <li><a href="index.html">Add to Group</a></li>
-        <li><a href="index.html">Add to Favorites</a></li>
-        <li><a href="index.html">Send Message</a></li>
-        <li><a href="index.html">Rate User</a></li>
-        <li><a href="index.html">Block User</a></li>
-    </ul>
-  </div>
-</header>
-<main>
-  <img src="../../..//img/catface.jpg" alt="zanepfp" height="200" width="250">
-  <h3>Last Login: 09/18/2000</h3>
-  <h3>Name: Zane-Foster</h3>
-  <h3> Location: Seattle-Washington</h3>
-  <h4>About Me:</h4>
-  <h4>I love going to concerts and listening to music, I enjoy traveling, hanging with friends, playing video games, thrift shopping, reading books, and taking pictures. Welcome to my page!</h4>
-  <p><a href="https://www.Youtube.com">Visit Youtube!!</a></p>
-  <img src="../../../img/verve.png" alt="verve" height="250" width="320">
-  <p><a href="https://spotify.link/i3WsQwwwQlb">My Spotify</a></p>
- </main>
- <menu class="flex-box">
-    <li><a href="indexmenu.html">Home</a></li>
-    <li><a href="menupage2.html">Page 2</a></li>
-    <li><a href="menupage3.html">Page 3</a></li>
-    <li><a href="menupage4.html">Page 4</a></li>
-    <li><a href="menupage5.html">Page 5</a></li>
-</menu>
-<footer>
-  Copyright © 2000-2009
-  <p><a href="https://theuselessweb.com/">Click for a surprise!</a></p>
-</footer>
-</body>
+  </head>
+  <body>
+    <header>
+      <nav><a href="menupage5.html"> Log in:</a></nav>
+      <div class="topnav">
+        <input type="text" placeholder="Search..." />
+      </div>
+      <div class="flex-container">
+        <img src="../../../img/logozp.png" alt="logo" />
+        <ul>
+          <li><a href="index.html">Add Friend</a></li>
+          <li><a href="index.html">Add to Group</a></li>
+          <li><a href="index.html">Add to Favorites</a></li>
+          <li><a href="index.html">Send Message</a></li>
+          <li><a href="index.html">Rate User</a></li>
+          <li><a href="index.html">Block User</a></li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <img
+        src="../../..//img/catface.jpg"
+        alt="zanepfp"
+        height="200"
+        width="250"
+      />
+      <P>Last Login: 09/18/2000</P>
+      <P>Name: Zane-Foster</P>
+      <P>Location: Seattle-Washington</P>
+      <h1>About Me:</h1>
+      <P>
+        I love going to concerts and listening to music, I enjoy traveling,
+        hanging with friends, playing video games, thrift shopping, reading
+        books, and taking pictures. Welcome to my page!
+      </P>
+      <p><a href="https://www.Youtube.com">Visit Youtube!!</a></p>
+      <img src="../../../img/verve.png" alt="verve" height="250" width="320" />
+      <p><a href="https://spotify.link/i3WsQwwwQlb">My Spotify</a></p>
+    </main>
+    <menu class="flex-box">
+      <li><a href="indexmenu.html">Home</a></li>
+      <li><a href="menupage2.html">Page 2</a></li>
+      <li><a href="menupage3.html">Page 3</a></li>
+      <li><a href="menupage4.html">Page 4</a></li>
+      <li><a href="menupage5.html">Page 5</a></li>
+    </menu>
+    <footer>
+      Copyright © 2000-2009
+      <p><a href="https://theuselessweb.com/">Click for a surprise!</a></p>
+    </footer>
+  </body>
 </html>
