--- a/assignments/header/footer/indexmenu.html
+++ b/assignments/header/footer/indexmenu.html
@@ -32,24 +32,61 @@
       </div>
     </header>
     <main>
-      <img
-        src="../../..//img/catface.jpg"
-        alt="zanepfp"
-        height="200"
-        width="250"
-      />
-      <P>Last Login: 09/18/2000</P>
-      <P>Name: Zane-Foster</P>
-      <P>Location: Seattle-Washington</P>
-      <h1>About Me:</h1>
-      <P>
-        I love going to concerts and listening to music, I enjoy traveling,
-        hanging with friends, playing video games, thrift shopping, reading
-        books, and taking pictures. Welcome to my page!
-      </P>
-      <p><a href="https://www.Youtube.com">Visit Youtube!!</a></p>
-      <img src="../../../img/verve.png" alt="verve" height="250" width="320" />
-      <p><a href="https://spotify.link/i3WsQwwwQlb">My Spotify</a></p>
+      <div class="flexy">
+        <div class="catpfp">
+          <img
+            src="../../..//img/catface.jpg"
+            alt="zanepfp"
+            height="280"
+            width="310"
+          />
+        </div>
+        <div class="item">
+          <div class="userinfo">
+            <p>Last Login: 09/18/2000</p>
+            <p>Name: Zane-Foster</p>
+            <p>Location: Seattle-Washington</p>
+          </div>
+          <div class="stars">
+            <img
+              src="../../../img/top.png"
+              alt="stars"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="ovalstar">
+            <img src="../../..//img/bottom.png" alt="ovalstar" height="100" />
+          </div>
+        </div>
+      </div>
+      <div class="title">
+        <h1>About Me:</h1>
+      </div>
+      <div class="bio">
+        <p>
+          I love going to concerts and listening to music, I enjoy traveling,
+          hanging with friends, playing video games, thrift shopping, reading
+          books, and taking pictures. Welcome to my page!
+        </p>
+      </div>
+      <div class="yt-text">
+        <p>One of my favorite music videos!</p>
+      </div>
+      <div class="verve">
+        <a href="https://www.youtube.com/watch?v=1lyu1KKwC74"
+          ><img
+            src="../../../img/verve.png"
+            alt="verve"
+            height="300"
+            width="470"
+        /></a>
+      </div>
+      <p class="spotify-text">
+        <a href="https://open.spotify.com/user/zanefoster35?si=3beb3d2662e14cd5"
+          >My Spotify</a
+        >
+      </p>
     </main>
     <menu class="flex-box">
       <li><a href="indexmenu.html">Home</a></li>
@@ -62,5 +99,6 @@
       Copyright © 2000-2009
       <p><a href="https://theuselessweb.com/">Click for a surprise!</a></p>
     </footer>
+    <div class="shadow"></div>
   </body>
 </html>
