--- a/index.html
+++ b/index.html
@@ -1,54 +1,85 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
-    <head> <!-- does not show in browser -->
-      <meta charset="utf-8" />
-        <meta name="viewpoint" content="width=device-width"/>
-
-            <title>ZaneSpace</title>
-    </head> 
-
-    <header>         
-        <div>Profile pic</div>
-        <p>Site Name</p> 
-        <div>Search bar</div>
-        <p>Username</p>
-        <p>Date joined</p>
+  <head>
+    <!-- does not show in browser -->
+    <meta charset="utf-8" />
+    <meta name="viewpoint" content="width=device-width" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Righteous&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>ZaneSpace</title>
+  </head>
+  <body>
+    <header>
+      <nav><a href="page5.html"> Log in:</a></nav>
+      <div class="topnav">
+        <input type="text" placeholder="Search..." />
+      </div>
+      <div class="flex-container">
+        <img src="img/logozp.png" alt="logo" />
+        <ul>
+          <li><a href="index.html">Add Friend</a></li>
+          <li><a href="index.html">Add to Group</a></li>
+          <li><a href="index.html">Add to Favorites</a></li>
+          <li><a href="index.html">Send Message</a></li>
+          <li><a href="index.html">Rate User</a></li>
+          <li><a href="index.html">Block User</a></li>
+        </ul>
+      </div>
     </header>
-
-    <body>
-        <h1>Title</h1>
-        <div>Personal picture</div>
-        <p> Information about me</p>
-        <Div>Youtube link</Div>
-
-            <menu>
-                <li>Page 2</li>
-                <li>Page 3</li>
-                <li>Page 4</li>
-                <li>Page 5</li>
-            </menu>
-<main>
-    <h1>Title!</h1>
-    <P> Big Time</P>
-    <h2> Title 2</h2>
-    <ul>
-        <li></li>
-        <li></li>
-    </ul>
-</main>
-<Footer>This footer is huge</Footer>
-
-            <style>
-                Header, footer {
-                    background-color:grey;  
-                    font-size: 1em;
-                }
-                p, div, menu, ul, li, img {
-                    border: 1px solid #000;
-                    color:black; 
-                
-                }
-            </style>
-
-    </body>
+    <main>
+      <div class="flexy">
+        <div class="catpfp">
+          <img src="img/catface.jpg" alt="zanepfp" height="280" width="310" />
+        </div>
+        <div class="item">
+          <div class="userinfo">
+            <p>Last Login: 09/18/2000</p>
+            <p>Name: Zane-Foster</p>
+            <p>Location: Seattle-Washington</p>
+          </div>
+          <div class="stars">
+            <img src="img/top.png" alt="stars" width="100" height="100" />
+          </div>
+          <div class="ovalstar">
+            <img src="img/bottom.png" alt="ovalstar" height="100" />
+          </div>
+        </div>
+      </div>
+      <div class="title">
+        <h1>About Me:</h1>
+      </div>
+      <div class="bio">
+        <p>
+          I love going to concerts and listening to music, I enjoy traveling,
+          hanging with friends, playing video games, thrift shopping, reading
+          books, and taking pictures. Welcome to my page!
+        </p>
+      </div>
+      <div class="yt-text">
+        <p>One of my favorite music videos!</p>
+      </div>
+      <div class="verve">
+        <a href="https://www.youtube.com/watch?v=1lyu1KKwC74">
+          <img src="img/verve.png" alt="verve" height="400" width="570" />
+        </a>
+      </div>
+      <p class="spotify-text">My Spotify</p>
+    </main>
+    <menu class="flex-box">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="page2.html">Page 2</a></li>
+      <li><a href="page3.html">Page 3</a></li>
+      <li><a href="page4.html">Page 4</a></li>
+      <li><a href="page5.html">Page 5</a></li>
+    </menu>
+    <footer>
+      Copyright © 2000-2009
+      <p><a href="https://theuselessweb.com/">Click for a surprise!</a></p>
+    </footer>
+  </body>
 </html>
